--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -85,4 +85,6 @@
     <string name="empty_value">None</string>
     <string name="save">Save</string>
 
+
+    <string name="hiv_follow_up_visit">HIV Follow Up Visit</string>
 </resources>
