--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -85,6 +85,10 @@
     <string name="empty_value">None</string>
     <string name="save">Save</string>
 
-
     <string name="hiv_follow_up_visit">HIV Follow Up Visit</string>
+    <string name="hiv_visit_day_due">%s DAYS DUE</string>
+    <string name="hiv_visit_day_due_today">DUE TODAY</string>
+    <string name="hiv_visit_day_next_due">Next Due %s </string>
+    <string name="hiv_visit_day_overdue">%s DAYS OVERDUE</string>
+    <string name="hiv_visit_day_overdue_today">OVERDUE TODAY</string>
 </resources>
