--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="chw_phone">CHW Phone</string>
     <string name="fill_followup_form">Fill Follow-up Form</string>
     <string name="view_profile">View Profile</string>
+    <string name="separator"> -  {0}</string>
 </resources>
