--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -108,4 +108,10 @@
     <string name="view_profile">View Profile</string>
     <string name="separator"> -  {0}</string>
     <string name="followup_date">Followup Date</string>
+    <string name="hiv_community_followup_referral_issued">HIV Client Community followup referral issued to CHW</string>
+    <string name="hiv_outcome_saved">HIV Problem outcome saved</string>
+    <string name="hiv_community_followup_feedback_saved">HIV Community followup feedback saved</string>
+    <string name="form_saved">Form saved successfully</string>
+    <string name="hiv_positive_status">HIV Positive</string>
+    <string name="hiv_negative_status">HIV Negative</string>
 </resources>
