--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="hiv_visit_day_next_due">Next Due %s </string>
     <string name="hiv_visit_day_overdue">%s DAYS OVERDUE</string>
     <string name="hiv_visit_day_overdue_today">OVERDUE TODAY</string>
-    <string name="successful_registration">Client Registered to HIV successfully</string>
+    <string name="successful_hiv_registration">Client Registered to HIV successfully</string>
     <string name="successful_visit">Client HIV visit saved successfully</string>
     <string name="form_not_saved">Form was not saved</string>
 
