--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="error_unable_to_start_form">An error occurred when starting the form</string>
     <string name="error_unable_to_save_form">An error occurred when saving the form</string>
     <string name="hiv_clients">HIV Clients</string>
+    <string name="hiv_index_clients">Index Clients</string>
     <string name="hiv_community_followup_clients">Followup Clients</string>
     <string name="followup_referral">HIV Followup Referrals</string>
 
