--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="hiv_outcome_saved">HIV Problem outcome saved</string>
     <string name="hiv_community_followup_feedback_saved">HIV Community followup feedback saved</string>
     <string name="form_saved">Form saved successfully</string>
+    <string name="hiv_positive_status_on_medication">HIV Positive Already on ARV Medication</string>
     <string name="hiv_positive_status">HIV Positive</string>
     <string name="hiv_negative_status">HIV Negative</string>
     <string name="index_client_has_registered_contacts">Has registered contacts</string>
