Added more swahili translations

--- a/opensrp-chw-hiv/src/main/res/values-sw/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values-sw/strings.xml
@@ -105,4 +105,23 @@
     <string name="fill_followup_form">Jaza fomu ya ufatiliyaji</string>
     <string name="view_profile">angalia taarifa</string>
     <string name="separator">- {0}</string>
+    <string name="hiv_index_clients_contacts">Washirika wa ngono/wakujidunga</string>
+    <string name="hiv_community_followup_clients">Wateja wa kuwafuatilia</string>
+    <string name="hiv_return_to_index_contacts_page">Rudi kwenye orodha ya washirika wa ngono/wakujidunga</string>
+    <string name="record_index_contact_followup">Rekodi ufuatiliaji wa washirika wa ngono/wakujidunga</string>
+    <string name="index_contact_visit_done">Ufuatiliaji wa Mshirika wa ngono/wakujidunga umekamilika</string>
+    <string name="successful_hiv_registration">Mteja amesajiliwa</string>
+    <string name="followup_date">tarehe ya ufuatiliaji</string>
+    <string name="hiv_community_followup_referral_issued">Rufaa ya Mshirika wa ngono/wakujidunga kwenda kwa mtoa huduma wa afya ngazi ya jamii imekamilika</string>
+    <string name="hiv_negative_status">Mteja asiya na VVU</string>
+    <string name="hiv_positive_status">Mteja mwenye VVU</string>
+    <string name="hiv_positive_status_on_medication">Mteja mwenye VVU aliyeanza dawa</string>
+    <string name="form_saved">Fomu imehifadhiwa</string>
+    <string name="hiv_community_followup_feedback_saved">Fomu ya ufuatiliaji imehifadhiwa</string>
+    <string name="hiv_outcome_saved">Matokeo ya matibabu yamehifadhiwa</string>
+    <string name="go_to_index_client_contact_list">Fungua orodha wa washirika wa ngono/wakujidunga</string>
+    <string name="index_client_has_registered_contacts">Mteja ana washirika wa ngono/wakujidunga</string>
+    <string name="client_was_not_tested">Mteja hakupimwa VVU</string>
+    <string name="register_contacts">Washirika waliosajiliwa</string>
+    <string name="associated_index_client">" Mteja mwenye VVU anayehusishwa"</string>
 </resources>
