--- a/opensrp-chw-hiv/src/main/res/values/strings.xml
+++ b/opensrp-chw-hiv/src/main/res/values/strings.xml
@@ -125,5 +125,10 @@
 
     <string name="client_was_not_tested">Client was not tested</string>
     <string name="register_contacts">Register Contacts</string>
-    <string name="successful_registration">Successful Registation</string>
+    <string name="successful_registration">Successful Registration</string>
+    <string name="index_client_re_elicit">The client should re-elicit more contacts</string>
+    <string name="index_contact_community_followup_referral_notification_message">Message: %1$s</string>
+    <!--    Sex-->
+    <string name="sex_male">Male</string>
+    <string name="sex_female">Female</string>
 </resources>
